# Plug-Classifier

./: .gitignore  Commands.txt  README.md  pyproject.toml  requirements.txt
configs/: augment.yaml  dataset.yaml  model.yaml  train.yaml
scripts/: infer.sh  train.sh
src/detector/: cli.py  logging_utils.py  seed.py
src/detector/data/: dataset.py  splits.py  transforms.py
src/detector/infer/: predict.py
src/detector/models/: build.py
src/detector/train/: metrics.py  trainer.py
src/port_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
